--- a/API/EngineeringLog/appsettings.json
+++ b/API/EngineeringLog/appsettings.json
@@ -1,6 +1,15 @@
 {
   "ConnectionStrings": {
-    "EngineeringLog": "Host=localhost; Port=5432; Database=EngineeringLogDb; Username=postgres; Password=Angitha@02"
+    "EngineeringLog": "Host=localhost; Port=5432; Database=EngineeringLogDb; Username=postgres; Password=1234"
+  },
+  "JwtSettings": {
+    "SecretKey": "your-very-secure-256-bit-key-should-be-at-least-64-characters-long",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "ExpiryMinutes": 120
+  },
+  "HrmsSettings": {
+    "LoginUrl": "https://hrdetails.nipponpaint.co.in/api/Employee/Authenticate"
   },
   "Logging": {
     "LogLevel": {
