--- a/API/EngineeringLog/appsettings.json
+++ b/API/EngineeringLog/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "EngineeringLog": "Host=localhost; Port=5432; Database=EngineeringLogDb; Username=postgres; Password=1234"
+    "EngineeringLog": "Host=192.168.248.9; Port=5432; Database=EngineeringLog; Username=postgres; Password=Nippon@1234$"
   },
   "JwtSettings": {
     "SecretKey": "your-very-secure-256-bit-key-should-be-at-least-64-characters-long",
