--- a/UI/package.json
+++ b/UI/package.json
@@ -29,10 +29,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.394.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.23.1",
