--- a/UI/package.json
+++ b/UI/package.json
@@ -38,9 +38,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
