--- a/UI/package.json
+++ b/UI/package.json
@@ -46,6 +46,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.31",
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
